# namne

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  google-cloud-setup.txt  justfile
client/: .env  eslint.config.js  index.html  package.json  pnpm-lock.yaml
client/src/: App.tsx  AppRoutes.tsx  config.ts  hooks.ts  index.css  main.tsx
client/src/components/ui/: LoadingSpinner.tsx  card.tsx
client/src/feat/auth/: AuthContext.ts  AuthProvider.tsx  LoginPage.tsx  types.ts  useAuth.ts
client/src/feat/names/: api.ts  types.ts
client/src/feat/voting/: Match.tsx  api.ts  types.ts
infra/: .env.development  DOCKER_README.md  Dockerfile.postgres  docker-compose.prod.yml  docker-compose.yml  run.sh
server/: README.md  development.env  pyproject.toml  requirements.txt  test_api.py
server/app/: __init__.py  auth.py  config.py  crud.py  db_models.py  init_users.py  main.py  schema.py
server/app/config/: .env.development  config.py
server/app/db/: app.db  db.py  init_db.py
server/app/db/data/: be0001namntab12-2022.xlsx  boys_name_1000.csv  boys_name_1000_w_gender.csv  extract_names.py  girls_name_1000.csv  girls_name_1000_w_gender.csv  names.html  names_short.html  women_100_0.xlsx
