[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "server"
version = "0.1.0"
description = "Backend server for the project"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "sqlalchemy",
    "uvicorn",
    # Add your other dependencies here
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
]

# Tool configurations can be inherited from root or duplicated here
[tool.ruff]
line-length = 88
target-version = "py311"
fix = true  # Enable auto-fixing by default

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes (includes F401)
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "C4",   # flake8-comprehensions
  "TID",  # flake8-tidy-imports
  "SIM",  # flake8-simplify
]
ignore = [
  "E501",  # line too long (handled by Black)
]
fixable = ["ALL"]  # Allow fixing all errors that can be auto-fixed
unfixable = []     # Don't prevent any auto-fixes (overrides any previous unfixable settings)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true 